Faulty resizing behavior of frame node inside material node setup #40094

Closed
opened 2014-05-08 12:54:12 +02:00 by Willi · 7 comments

System Information
Win7/64

Blender Version
since 2.64

Short description of error
see subject

Exact steps for others to reproduce the error
FrameNodeResize.blend

In the attached file, drag the right border of the frame node to the left. The node size will quickly increase to the right.

**System Information** Win7/64 **Blender Version** since 2.64 **Short description of error** see subject **Exact steps for others to reproduce the error** [FrameNodeResize.blend](https://archive.blender.org/developer/F87820/FrameNodeResize.blend) In the attached file, drag the right border of the frame node to the left. The node size will quickly increase to the right.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @willi-2

Added subscriber: @willi-2
Author

Don't know whether it's really worth yet another report:
If "- [x] Shrink" of the frame node is enabled, the "label size" is not correctly taken into account, i.e. the top-most node overlaps the label. Increase the label size to 50 for testing.

Don't know whether it's really worth yet another report: If "- [x] Shrink" of the frame node is enabled, the "label size" is not correctly taken into account, i.e. the top-most node overlaps the label. Increase the label size to 50 for testing.
Lukas Tönne self-assigned this 2014-05-08 14:18:36 +02:00

This issue was referenced by blender/blender-addons-contrib@d61f8a5a22

This issue was referenced by blender/blender-addons-contrib@d61f8a5a22b7658582470cd15ba5f3713e9c3570

This issue was referenced by d61f8a5a22

This issue was referenced by d61f8a5a22b7658582470cd15ba5f3713e9c3570
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit d61f8a5a22.

Closed by commit d61f8a5a22.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40094
No description provided.